--- a/app1/index.html
+++ b/app1/index.html
@@ -5,15 +5,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" />
   <link rel="stylesheet" type="text/css" href="timer.css">
   <title>Timer App</title>
 </head>
 
 <body>
-  <h1>Timer App</h1>
-  <input type="text" id="duration" />
-  <button id="start">Start</button>
-  <button id="pause">Pause</button>
+
+  <div class="timer">
+    <div class="controls">
+      <input id="duration" value="3" />
+      <div>
+        <button id="start"><i class="fas fa-play"></i></button>
+        <button id="pause"><i class="fas fa-pause"></i></button>
+      </div>
+    </div>
+    <svg class="dial">
+      <circle fill="transparent" stroke="green" stroke-width="15" r="190" cx="0" cy="200"
+        transform="rotate(-90 100 100)" />
+    </svg>
+  </div>
+  <script src="timer.js"></script>
   <script src="index.js"></script>
 </body>
 
