--- a/moviesApp/index.html
+++ b/moviesApp/index.html
@@ -26,8 +26,22 @@
       </div>
     </section>
     <div class="container">
-      <div class="autocomplete"></div>
-      <div id="summary"></div>
+      <div class="columns">
+        <div class="column">
+          <div id="left-autocomplete"></div>
+          <div id="leftSummary"></div>
+        </div>
+        <div class="column">
+          <div id="right-autocomplete"></div>
+          <div id="rightSummary"></div>
+        </div>
+      </div>
+      <div class="column is-half notification  is-primary tutorial">
+        <div id="left-autpcomplete">
+          <h1 class="title">Search for a Movie on both sides</h1>
+          <p class="subtitle">We will tell which is best!</p>
+        </div>
+      </div>
     </div>
     <script src="utils.js"></script>
     <script src="autocomplete.js"></script>
