--- a/moviesApp/index.html
+++ b/moviesApp/index.html
@@ -17,7 +17,7 @@
       <div class="hero-body">
         <div class="container">
           <h1 class="title">
-            Movie Fight
+            Movie Fight Dev
             <span class="icon">
               <i class="fas fa-film"></i>
             </span>
